# nstu_pract_78

./: CMakeLists.txt  Catalog.cpp  Catalog.h  Laptop.cpp  Laptop.h  LaptopSpec.cpp  LaptopSpec.h  Money.cpp  Money.h  MoneyUnit.cpp  MoneyUnit.h  Params.cpp  Params.h  Smartphone.cpp  Smartphone.h  main.cpp  utils.cpp  utils.h
